@@ -8,9 +8,12 @@ Change in the syntax of the LatestAgeMortalityPattern column in vwBaseYear datas
 
 Argument pasfr.ignore.phase2 added to pop.predict.subnat.
 
-Additional steps for very young and very old child-bearing ages in kantorova.pasfr function.
+Additional steps for very young and very old child-bearing ages in 
+kantorova.pasfr function.
 
 Minimum allowed population in an age group checked only if migration is negative.
+
+New function peak.probability.
 
 10.0-0/1 (08/09/2023)
 ------
